# LTRSPG-2212

./: .gitignore  @  LTRSPG-2212-credentials.csv  README.md  cursor_resolve_stuck_pods_during_kubead.md
ansible/: ansible-lab-intialize.sh  cleanup_playbook.yaml  dcloud_startup_playbook.yaml
ansible/xarchive/: container-ips.sh  create-berlin-nets.sh  lab-init.sh
diagrams/: TRMSI-3000.drawio
infrastructure/ansible/: build_k8s_worker_playbook.yaml  build_london_vms_playbook.yaml  cleanup_playbook.yaml  hosts  london_vms_base_playbook.yaml  london_vms_k8s_install.yaml  london_vms_k8s_workers.yaml  startup_playbook.yaml  vm_build_playbook.yaml
infrastructure/vms/: london-bridges.service  london-bridges.sh  update-lab-repo.service  update-lab-repo.sh
lab_1/: add-latency.sh  cleanup-lab_1.sh  lab_1-cloud-init.yaml  lab_1-edgeshark.md  lab_1-guide.md  lab_1-packet-walk.md  lab_1-topology.clab.drawio  lab_1-topology.clab.yaml  lab_1-topology.clab.yaml.annotations.json  lab_1_quick_config.md
lab_1/scripts/: add-latency.sh
lab_1/xrd-config/: amsterdam-netplan.yaml  amsterdam.cfg  barcelona.cfg  berlin.cfg  lab_1_quick_config.md  london.cfg  network-config-rome.sh  paris.cfg  rome-netplan.yaml  rome.cfg  xrd01.cfg  xrd02.cfg  xrd03.cfg  xrd04.cfg  xrd05.cfg  (+3 more)
lab_2/: cleanup-lab_2.sh  lab_2-guide.md  lab_2-packet-walk.md  lab_2-topology.clab.yaml  lab_2_quick_config.md  validation-cmd-output.md
lab_3/: cleanup-lab_3.sh  k8s-install-instructions.md  lab_3-appendix.md  lab_3-guide.md
lab_4/: cleanup-lab_4.sh  lab_4-appendix.md  lab_4-guide.md  lab_4-topology.clab.yaml  sonic_cli_reference.md
lab_5/: lab_5-arango-queries.md  lab_5-bonus.md  lab_5-encap-reduced.md  lab_5-guide-orig.md  lab_5-guide.md  lab_5-notes.md
srv6-pytorch-plugin/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
srv6-pytorch-plugin/deploy/: README.md  srv6-pytorch-test.yaml  srv6-pytorch-training-test.yaml
srv6-pytorch-plugin/examples/: README.md  test_connectivity.py
srv6-pytorch-plugin/srv6_plugin/: __init__.py  controller.py  distributed.py  plugin.py  route_programmer.py
xarchive/: berlin-history.md  generate-routes.py
(+174 files in other folders)
